Make application run successfully but other problems occur

--- a/pom.xml
+++ b/pom.xml
@@ -23,13 +23,13 @@
         </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>jakarta-httpcore</artifactId>
-            <version>4.0-alpha4</version>
+            <artifactId>httpcore</artifactId>
+            <version>4.3</version>
         </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
-            <version>4.3.1</version>
+            <version>4.3</version>
         </dependency>
         <dependency>
             <groupId>org.jsoup</groupId>
